--- a/fonts.html
+++ b/fonts.html
@@ -1,449 +1,211 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- SEO 优化 -->
-    <title>字造产品展示 - 你的关键词</title>
-    <meta name="description" content="字造产品展示，提供优质的字库产品和设计资源。了解更多关于字造的信息。">
-    <meta name="keywords" content="字造, 字库, 字体设计, 设计资源, 你的关键词">
-    <meta name="author" content="字造">
-
-    <!-- 社交媒体优化 (Open Graph) -->
-    <meta property="og:title" content="字造产品展示 - 你的关键词">
-    <meta property="og:description" content="字造产品展示，提供优质的字库产品和设计资源。了解更多关于字造的信息。">
-    <meta property="og:image" content="URL_TO_YOUR_IMAGE">
-    <meta property="og:url" content="URL_TO_YOUR_PAGE">
-    <meta property="og:type" content="website">
-
-    <!-- 网站图标 -->
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-
-    <!-- 结构化数据标记 (JSON-LD) -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Product",
-      "name": "作品标题",
-      "image": "URL_TO_YOUR_IMAGE",
-      "description": "作品的详细描述",
-      "author": {
-        "@type": "Person",
-        "name": "Zizao Thye"
-      }
-    }
-    </script>
-
+    <title>本地可变字体控制台</title>
     <style>
-        /* 全局样式 */
+        /* 字体定义 */
+        @font-face {
+            font-family: 'MyVariableFont';
+            src: url('fonts/YourFont-VF.woff2') format('woff2-variations');
+            font-weight: 100 900;
+            font-stretch: 75% 125%;
+        }
+
+        :root {
+            --weight: 400;
+            --width: 100;
+            --size: 24;
+            --primary-color: #2c3e50;
+            --secondary-color: #3498db;
+        }
+
         body {
-            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f8f8f8;
-            color: #333;
-            line-height: 1.6;
+            font-family: 'MyVariableFont', sans-serif;
+            max-width: 1200px; /* 增大页面宽度 */
+            margin: 50px auto;
+            padding: 40px; /* 增加内边距 */
+            background: #f8f9fa;
         }
 
-        /* 容器样式 */
-        .container {
-            width: 80%;
-            max-width: 1400px;
-            margin: 0 auto;
-            padding: 0;
-            text-align: left;
+        .control-panel {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 30px;
+            background: white;
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
         }
 
-        /* 头部导航栏样式 */
-        header {
-            background-color: #f5f5f7;
-            backdrop-filter: blur(20px);
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            height: 66px;
-            padding: 0 10%;
+        .slider-container {
             position: relative;
-            z-index: 3;
-            transition: background-color 0.3s ease;
+            padding: 15px 20px;
+            background: linear-gradient(145deg, #ffffff, #f1f3f5);
+            border-radius: 12px;
+            border: 1px solid #e9ecef;
         }
 
-        header:hover {
-            background-color: #e8e8ea;
-        }
-
-        .logo {
-            margin-right: 20px;
-        }
-
-        .logo a img {
+        .slider-container label {
             display: block;
-            max-width: 100%;
-            height: auto;
+            margin-bottom: 12px;
+            color: var(--primary-color);
+            font-weight: 600;
         }
 
-        nav ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-        }
-
-        nav > ul > li {
-            margin: 0 15px;
-            position: relative;
-        }
-
-        nav > ul > li > a {
-            color: #333;
-            text-decoration: none;
-            font-size: 15px;
-            padding: 10px 0;
-            display: block;
-            position: relative;
-            transition: color 0.3s ease;
-        }
-
-        nav > ul > li > a::after {
-            content: "";
-            position: absolute;
+        input[type="range"] {
             width: 100%;
-            height: 2px;
-            bottom: 0;
-            left: 0;
-            background-color: #000;
-            transform: scaleX(0);
-            transform-origin: bottom right;
-            transition: transform 0.3s ease;
+            height: 8px;
+            background: #e9ecef;
+            border-radius: 4px;
+            outline: none;
+            -webkit-appearance: none;
         }
 
-        nav > ul > li > a:hover::after {
-            transform: scaleX(1);
-            transform-origin: bottom left;
-        }
-
-        .toggle-button {
-            display: none;
-            background: none;
-            border: none;
-            color: #333;
-            font-size: 20px;
+        input[type="range"]::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            width: 20px;
+            height: 20px;
+            background: var(--secondary-color);
+            border-radius: 50%;
             cursor: pointer;
-            transition: color 0.3s ease;
+            transition: transform 0.2s;
         }
 
-        .toggle-button:hover {
-            color: #000;
+        input[type="range"]::-webkit-slider-thumb:hover {
+            transform: scale(1.2);
         }
 
-        nav ul li ul {
-            display: none;
-            position: absolute;
-            top: 100%;
-            left: -15px;
-            background-color: #fff;
-            min-width: 200px;
-            border-radius: 0 0 10px 10px;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
-            opacity: 0;
-            visibility: hidden;
-            transform: translateY(-10px);
-            transition: all 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-            z-index: 4;
-        }
-
-        nav ul li:hover ul {
-            display: block;
-            opacity: 1;
-            visibility: visible;
-            transform: translateY(0);
-        }
-
-        nav ul li ul li {
-            margin: 0;
-        }
-
-        nav ul li ul li a {
-            color: #333;
-            padding: 12px 20px;
-            display: block;
-            text-decoration: none;
-            font-size: 13px;
-            transition: background-color 0.3s ease, color 0.3s ease;
-        }
-
-        nav ul li ul li a:hover {
-            background-color: #f5f5f5;
-            color: #0070c9;
-        }
-
-        @media (max-width: 768px) {
-            header {
-                padding: 0 20px;
-            }
-
-            nav ul {
-                display: none;
-                position: absolute;
-                top: 66px;
-                left: 0;
-                width: 100%;
-                background-color: #f5f5f7;
-                flex-direction: column;
-            }
-
-            nav ul.show {
-                display: flex;
-            }
-
-            nav > ul > li {
-                margin: 0;
-            }
-
-            nav > ul > li > a {
-                padding: 15px 20px;
-            }
-
-            nav ul li ul {
-                position: static;
-                width: 100%;
-                box-shadow: none;
-                border-radius: 0;
-                opacity: 1;
-                visibility: visible;
-                transform: translateY(0);
-                display: none;
-            }
-
-            nav ul li.active ul {
-                display: block;
-            }
-
-            .toggle-button {
-                display: block;
-            }
-        }
-
-        /* 作品展示样式 */
-        .work-header {
-            padding: 20px;
-            margin-bottom: 20px;
-            border-bottom: 1px solid #eee;
-        }
-
-        .work-title {
-            font-size: 2.2em;
-            font-weight: bold;
-            margin-bottom: 10px;
-            color: #222;
-        }
-
-        .work-info {
-            color: #888;
-            font-size: 1em;
-        }
-
-        .work-content {
-            margin-bottom: 50px; /* 增加底部外边距 */
-        }
-
-        .work-description {
-            padding: 20px;
-            margin-bottom: 20px;
-        }
-
-        .work-description p {
-            font-size: 1.1em;
-            line-height: 1.8;
-            color: #555;
-            margin-bottom: 15px;
-        }
-
-        .work-image {
-            /* display: flex;  移除 Flexbox 布局 */
-            /* flex-wrap: wrap;  移除 Flexbox 布局 */
-            /* justify-content: flex-start;  移除 Flexbox 布局 */
-        }
-
-        .work-image img {
-            width: 100%;
-            margin-bottom: 0;
-            border-radius: 0;
-            border: none;
-            box-sizing: border-box;
-            display: block;
-        }
-
-        /* 底部导航栏样式 */
-        footer {
-            background-color: #f5f5f7;
-            color: #333;
+        .value-display {
+            display: inline-block;
+            margin-left: 10px;
+            min-width: 50px;
+            padding: 5px 10px;
+            background: var(--primary-color);
+            color: white;
+            border-radius: 4px;
             text-align: center;
-            border-top: 1px solid #e8e8ea;
-            width: 100%;
-            box-sizing: border-box;
-            padding: 20px 0;
         }
 
-        .footer-container {
-            width: 80%;
-            margin: 0 auto;
-            display: flex;
-            justify-content: space-around;
-            flex-wrap: wrap;
-            margin-bottom: 20px;
-            box-sizing: border-box;
+        .preview-area {
+            margin-top: 50px;
+            padding: 40px;
+            background: white;
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
         }
 
-        .footer-section {
-            width: 30%;
-            min-width: 200px;
-            margin-bottom: 20px;
-            text-align: left;
-            padding-left: 50px;
-            box-sizing: border-box;
-        }
-
-        .footer-section h3 {
-            font-size: 16px;
-            margin-bottom: 10px;
-        }
-
-        .footer-section p {
-            font-size: 14px;
+        #previewText {
+            font-size: calc(var(--size) * 1px);
             line-height: 1.6;
+            min-height: 200px;
+            padding: 30px;
+            border: 2px dashed #e9ecef;
+            border-radius: 12px;
+            transition: all 0.3s ease;
         }
 
-        .footer-section ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        .footer-section li {
-            margin-bottom: 5px;
-        }
-
-        .footer-section a {
-            color: #0070c9;
-            text-decoration: none;
-            transition: color 0.3s ease;
-        }
-
-        .footer-section a:hover {
-            color: #003f8e;
-        }
-
-        .footer-bottom {
-            padding-top: 10px;
-            border-top: 1px solid #e8e8ea;
-        }
-
-        .footer-bottom p {
-            font-size: 12px;
-            color: #666;
-        }
-
-        /* 响应式底部导航栏 */
-        @media (max-width: 768px) {
-            .footer-container {
-                width: 90%;
-                flex-direction: column;
-                align-items: center;
-            }
-
-            .footer-section {
-                width: 80%;
-                text-align: center;
-                padding-left: 0;
-            }
+        #previewText:focus {
+            border-color: var(--secondary-color);
+            outline: none;
         }
     </style>
-    <script>
-        function toggleNav() {
-            var navUl = document.getElementById("nav-ul");
-            navUl.classList.toggle("show");
-        }
-    </script>
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <a href="index.html" aria-label="回到首页">
-                <img src="logo.png" alt="网站 logo">
-            </a>
+    <div class="control-panel">
+        <!-- 字重控制 -->
+        <div class="slider-container">
+            <label for="weightSlider">字重 <span class="value-display" id="weightValue">400</span></label>
+            <input type="range" id="weightSlider" min="100" max="900" step="10" value="400">
         </div>
-        <button class="toggle-button" onclick="toggleNav()" aria-label="切换导航菜单" aria-expanded="false">☰</button>
-        <nav>
-            <ul id="nav-ul">
-                <li><a href="index.html">首页</a></li>
-                <li><a href="fonts.html">字库产品</a></li>
-                <li><a href="bao.html">百宝库</a></li>
-                <li><a href="hao.html">字造导航</a></li>
-                <li><a href="more.html">更多</a>
-                    <ul>
-                        <li><a href="">近期发布</a></li>
-                        <li><a href="">表情包</a></li>
-                        <li><a href="">联系我们</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
-    </header>
 
-    <main class="container">
-        <article class="work-header">
-            <h1 class="work-title">作品标题</h1>
-            <div class="work-info">
-                <span>BY：Zizao Thye</span>
-            </div>
-        </article>
-
-        <article class="work-content">
-            <div class="work-description">
-                <p>
-                    这里是作品的详细描述。你可以添加关于作品的创作过程、灵感来源、技术细节等信息。
-                    你可以使用多个段落来组织你的描述，使其更易于阅读。
-                    例如，你可以介绍作品的设计理念、使用的软件和工具、以及遇到的挑战和解决方案。
-                </p>
-                <p>
-                    这是作品描述的第二段。你可以继续添加更多内容，详细介绍你的作品。
-                </p>
-            </div>
-
-            <div class="work-image">
-                <img src="image1.jpg" alt="作品图片">
-                <img src="image1.jpg" alt="作品图片">
-                <img src="image1.jpg" alt="作品图片">
-                <img src="image1.jpg" alt="作品图片">
-            </div>
-        </article>
-    </main>
-
-    <footer>
-        <div class="footer-container">
-            <div class="footer-section">
-                <h3>关于我们</h3>
-                <p>字造导航是一个为设计师提供灵感和资源的平台。</p>
-            </div>
-            <div class="footer-section">
-                <h3>联系方式</h3>
-                <p>邮箱：example@email.com</p>
-                <p>电话：123-456-7890</p>
-            </div>
-            <div class="footer-section">
-                <h3>友情链接</h3>
-                <ul>
-                    <li><a href="#">链接1</a></li>
-                    <li><a href="#">链接2</a></li>
-                    <li><a href="#">链接3</a></li>
-                </ul>
-            </div>
+        <!-- 宽度控制 -->
+        <div class="slider-container">
+            <label for="widthSlider">宽度 <span class="value-display" id="widthValue">100%</span></label>
+            <input type="range" id="widthSlider" min="75" max="125" value="100">
         </div>
-        <div class="footer-bottom">
-            <p>&copy; 2025 字造. All rights reserved.</p>
-        </div>
-    </footer>
 
+        <!-- 新增字号控制 -->
+        <div class="slider-container">
+            <label for="sizeSlider">字号 <span class="value-display" id="sizeValue">24px</span></label>
+            <input type="range" id="sizeSlider" min="12" max="72" value="24">
+        </div>
+    </div>
+
+    <div class="preview-area">
+        <div id="previewText" contenteditable="true">
+            在这里输入文字进行实时预览...
+            （支持：中英文混排、标点符号、换行）
+        </div>
+    </div>
+
+    <script>
+        // 初始化设置
+        const controls = {
+            weight: { element: weightSlider, display: weightValue, unit: '' },
+            width: { element: widthSlider, display: widthValue, unit: '%' },
+            size: { element: sizeSlider, display: sizeValue, unit: 'px' }
+        };
+
+        // 通用更新函数
+        function updateValue(type) {
+            const value = controls[type].element.value;
+            document.documentElement.style.setProperty(`--${type}`, value);
+            controls[type].display.textContent = value + controls[type].unit;
+            
+            // 特殊处理字体属性
+            if(type === 'weight') {
+                document.getElementById('previewText').style.fontWeight = value;
+            }
+            if(type === 'width') {
+                document.getElementById('previewText').style.fontStretch = `${value}%`;
+            }
+        }
+
+        // 绑定事件
+        Object.keys(controls).forEach(type => {
+            controls[type].element.addEventListener('input', () => {
+                updateValue(type);
+                saveSettings();
+            });
+        });
+
+        // 保存设置到本地存储
+        function saveSettings() {
+            const settings = {
+                weight: weightSlider.value,
+                width: widthSlider.value,
+                size: sizeSlider.value
+            };
+            localStorage.setItem('fontSettings', JSON.stringify(settings));
+        }
+
+        // 加载保存的设置
+        function loadSettings() {
+            const saved = JSON.parse(localStorage.getItem('fontSettings'));
+            if(saved) {
+                weightSlider.value = saved.weight || 400;
+                widthSlider.value = saved.width || 100;
+                sizeSlider.value = saved.size || 24;
+                
+                // 触发初始更新
+                Object.keys(controls).forEach(updateValue);
+            }
+        }
+
+        // 初始化加载
+        loadSettings();
+
+        // 添加动画帧优化
+        let isDragging = false;
+        document.querySelectorAll('input[type="range"]').forEach(slider => {
+            slider.addEventListener('mousedown', () => isDragging = true);
+            slider.addEventListener('mouseup', () => isDragging = false);
+            slider.addEventListener('input', () => {
+                if(!isDragging) {
+                    requestAnimationFrame(() => updateValue(slider.id.replace('Slider', '')));
+                }
+            });
+        });
+    </script>
 </body>
 </html>
